# dbf2csv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Version.h  main.cpp
dbf/: CMakeLists.txt  DbfColumn.cpp  DbfColumn.h  DbfHeader.cpp  DbfHeader.h  DbfMemo.cpp  DbfMemo.h  DbfMemoDbase3.cpp  DbfMemoDbase3.h  DbfMemoDbase4.cpp  DbfMemoDbase4.h  DbfMemoFoxpro.cpp  DbfMemoFoxpro.h  DbfRecord.cpp  DbfRecord.h  DbfTable.cpp  DbfTable.h  DbfUtils.h  DbfValue.cpp  DbfValue.h  DbfValueCurrency.cpp  DbfValueCurrency.h  TypedDbfValue.cpp  TypedDbfValue.h
dbf_tests/: CMakeLists.txt
dbf_tests/basic_tests/: CMakeLists.txt  DbfColumnFixture.cpp  DbfHeaderFixture.cpp  DbfRecordFixture.cpp  DbfTableFixture.cpp
dbf_tests/dbase03_tests/: CMakeLists.txt  Dbase03ColumnFixture.cpp  Dbase03HeaderFixture.cpp  Dbase03RecordFixture.cpp  Dbase03TableFixture.cpp
dbf_tests/dbase30_tests/: CMakeLists.txt  Dbase30ColumnFixture.cpp  Dbase30HeaderFixture.cpp  Dbase30RecordFixture.cpp  Dbase30TableFixture.cpp
dbf_tests/dbase31_tests/: CMakeLists.txt  Dbase31ColumnFixture.cpp  Dbase31HeaderFixture.cpp  Dbase31RecordFixture.cpp  Dbase31TableFixture.cpp
dbf_tests/dbasef5_tests/: CMakeLists.txt  DbaseF5ColumnFixture.cpp  DbaseF5HeaderFixture.cpp  DbaseF5RecordFixture.cpp  DbaseF5TableFixture.cpp
dbf_tests/fixtures/: temp.csv
dbf_tests/lib/gtest-1.7.0/: Makefile  cmake_install.cmake
